--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <script src="https://kit.fontawesome.com/515a0a5af3.js" crossorigin="anonymous"></script>
+
+  <!-- icon -->
+  <link rel="apple-touch-icon" href="/static/apple-touch-icon.png">
+  <link rel="shortcut icon" type="image/png" href="/static/apple-touch-icon.png" />
+
   <title>vue-computer-parts</title>
 </head>
 
