--- a/index.html
+++ b/index.html
@@ -6,10 +6,8 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <script src="https://kit.fontawesome.com/515a0a5af3.js" crossorigin="anonymous"></script>
   
-
   <!-- icon -->
-  <link rel="apple-touch-icon" href="/src/assets/img/vcp_icon.png">
-  <link rel="shortcut icon" type="image/png" href="/src/assets/img/vcp_icon.png" />
+  <link rel="icon" type="image/x-icon" href="apple-touch-icon.png" />
 
   <title>vue-computer-parts</title>
 </head>
