--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <script src="https://kit.fontawesome.com/515a0a5af3.js" crossorigin="anonymous"></script>
   
   <!-- icon -->
-  <link rel="icon" type="image/x-icon" href="static/apple-touch-icon.png" />
+  <link rel="icon" type="image/x-icon" href="static/img/vcp_icon.png" />
 
   <title>vue-computer-parts</title>
 </head>
